--- a/index.css
+++ b/index.css
@@ -39,13 +39,13 @@ div.container-fluid.subtwo {
 	bottom: 300px;
 }
 
-div.colone {
+/*div.colone {
 	padding-right: 0;
 }
 
 div.coltwo {
 	padding-left: 0;
-}
+}*/
 
 div.infoimg {
 	text-align: center;
